--- a/estilo.css
+++ b/estilo.css
@@ -1,73 +1,78 @@
 body {
-    font-family: 'arial', sans-serif;
+    font-family: 'Arial', sans-serif;
     background: linear-gradient(lightgrey);
+    margin: 0;
+    padding: 0;
 }
 
 header {
     background: rgb(35, 183, 233);
-    width: auto;
-    padding: 2px 0 0 20px;
+    padding: 20px;
     text-align: center;
     border: 1px solid;
     position: relative;
 }
 
 .meu-cabecalho {
-    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 img {
-    margin: 10px 0 0 0;
-    position: relative;
-    right: 8.4em;
+    margin-right: 10px;
     border: 1px solid;
     border-radius: 10px;
 }
 
 h1 {
-    margin: auto;
-    position: relative;
-    left: 1em;
-    bottom: 4em;
+    margin: 0;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 1.5rem;
 }
 
 .container-conteudo {
     text-align: center;
-    line-height: 1em;
-    width: auto;
+    padding: 50px 0;
 }
 
 h2 {
     font-weight: bold;
-    margin: 50px 0 0  0 ;
+    margin-top: 50px;
 }
 
 li p {
-    line-height: 2em;
+    line-height: 1.5;
 }
 
 .container-contato {
-    margin: 0 0 0 10px ;
     text-align: center;
+    padding: 20px;
 }
 
 footer {
     background: rgb(35, 183, 233);
-    width: auto;
-    margin: 8rem;
+    padding: 20px;
+    text-align: center;
+    margin-top: 50px;
 }
 
 .btnContrast {
     position: absolute;
     top: 10px;
     right: 10px;
-    line-height: 1em;
-    width: auto;
-    background-color: rgb(148, 192, 241);    
+    line-height: 1;
+    padding: 10px;
+    background-color: rgb(148, 192, 241);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .inverted {
     background: rgb(153, 204, 228);
 }
+ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
